# Modulith

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md
code/: .gitignore  CMakeLists.txt  README.md
code/core/: CMakeLists.txt
code/core/engine/: CMakeLists.txt
code/core/engine/include/: Context.h  Core.h  Engine.h  EntryPoint.h  Log.h  PreCompiledHeader.h  Subcontext.h
code/core/engine/include/modules/: Module.h  ModuleContext.h  ModuleInfo.h  ModulePathUtils.h  ModuleUtils.h  _api_docs.md  _technical_docs.md
code/core/engine/include/modules/resources/: ModuleResources.h
code/core/engine/include/profiling/: Profiler.h
code/core/engine/include/resources/: Resource.h  SubcontextResource.h
code/core/engine/include/utils/: DependencyGraph.h  FileDialog.h  PreferencesContext.h  Result.h  TypeUtils.h  YamlUtils.h
code/core/engine/src/: Context.cpp  Engine.cpp  Log.cpp  Resource.cpp
code/core/engine/src/modules/: ModuleContext.cpp  ModulePathUtils.cpp  ModuleResources.cpp  ModuleUtils.cpp
code/core/engine/src/profiling/: Profiler.cpp
code/core/engine/src/utils/: PreferencesContext.cpp
code/core/runtime/: CMakeLists.txt  _docs.md
code/core/runtime/src/: Runtime.cpp  Runtime.h
code/core/tests/: CMakeLists.txt
code/core/tests/src/: TestMain.cpp
code/core/tests/src/ecs/: ComponentManagerTests.cpp  ECSTestUtils.h  EntityTests.cpp
code/core/tests/src/ecs/EntityManager/: AddComponentTests.cpp  CreateEntityTests.cpp  DeferTests.cpp  DestroyEntityTests.cpp  ForTests.cpp  GetComponentTests.cpp  HasComponentsTests.cpp  (+3 more)
code/core/tests/src/utils/: DependencyGraphTests.cpp
code/docs/: CMakeLists.txt  _mainpage.md  _quickstart.md  _vertical_slice_tutorial.md
code/modules/: CMakeLists.txt
code/modules/core/: CMakeLists.txt  ModuleProject.projconfig
code/modules/core-tests/: CMakeLists.txt
code/modules/core-tests/src/: TestMain.cpp
code/modules/core-tests/src/ecs/: ComponentManagerTests.cpp  EntityTests.cpp
code/modules/core/include/: CoreModule.h  ModulithPreCompiledHeader.h  _api_docs.md
code/modules/core/include/assets/: AssetContext.h
code/modules/core/include/ecs/: ComponentManager.h  ECSContext.h  ECSUtils.h  Entity.h  EntityChunk.h  EntityManager.h  Prefab.h  StandardComponents.h  _api_docs.md  _technical_docs.md
code/modules/core/include/input/: InputState.h  KeyCodes.h
code/modules/core/include/renderer/: GraphicsContext.h  Material.h  Mesh.h  ModelLoaderUtils.h  RenderContext.h  Renderer.h  RendererAPI.h  StandardMaterial.h
code/modules/core/include/serialization/: Serializable.h  SerializationContext.h  SerializedEntity.h  SerializedObject.h  Serializer.h  SerializerResource.h
code/modules/core/include/window/: SubWindow.h  Window.h
code/modules/core/src/: CoreModule.cpp
code/modules/core/src/assets/: AssetContext.cpp
code/modules/core/src/ecs/: ComponentManager.cpp  ECSContext.cpp  EntityChunk.cpp  EntityManager.cpp  Prefab.cpp
code/modules/core/src/imgui/: ImGuiBuild.cpp  ImGuiWrapper.cpp  ImGuiWrapper.h
code/modules/core/src/input/: InputState.cpp
code/modules/core/src/opengl/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
code/modules/core/src/renderer/: Material.cpp  Mesh.cpp  ModelLoaderUtils.cpp  RenderContext.cpp  Renderer.cpp  StandardMaterial.cpp
code/modules/core/src/serialization/: SerializedEntity.cpp  SerializedObject.cpp
code/modules/core/src/windows/: WindowsWindow.cpp  WindowsWindow.h
code/modules/editor/: CMakeLists.txt  ModuleProject.projconfig
code/modules/editor/include/: EditorModule.h  EntityDebugContext.h  _api_docs.md
code/modules/editor/include/utils/: EntityHierarchy.h  SerializedObjectDrawUtils.h
code/modules/editor/src/: EditorModule.cpp  EntityDebugContext.cpp
code/modules/editor/src/ecs/: ProfilerSystem.cpp  ProfilerSystem.h  PropertiesWindowSystem.cpp  PropertiesWindowSystem.h  SelectionSystem.h
code/modules/editor/src/utils/: BlueprintUtils.cpp  BlueprintUtils.h  SerializedObjectDrawUtils.cpp  TreeHierarchy.h
code/modules/game/: CMakeLists.txt  ModuleProject.projconfig
code/modules/game/include/: GameModule.h  GameState.h  ModulithPreCompiledHeader.h  _docs.md
code/modules/game/include/ecs/: Components.h  DestroyOnCollisionSystem.h  LevelSetupSystem.h  LifetimeSystem.h  StrategyCameraController.h
code/modules/game/src/: GameModule.cpp  GameState.cpp
code/modules/game/src/ecs/: BuildingContext.cpp  CommandSystem.cpp  DestroyOnCollisionSystem.cpp  HealthSystem.cpp  LevelSetupSystem.cpp  LifetimeSystem.cpp  StrategyCameraController.cpp
code/modules/mario/: CMakeLists.txt
code/modules/mario/include/: MarioModule.h  MarioSystem.h  _docs.md
code/modules/mario/src/: MarioModule.cpp
code/modules/physics/: CMakeLists.txt
code/modules/physics/include/: PhysicsComponents.h  PhysicsModule.h  PhysicsSystemsGroup.h  Raycast.h  _api_docs.md
code/modules/physics/src/: InternalPhysXComponents.h  PhysXSystem.cpp  PhysXSystem.h  PhysXUtils.h  PhysicsModule.cpp  PhysicsModuleCore.h  Raycast.cpp
code/modules/renderer/: CMakeLists.txt
code/modules/renderer/include/: RenderComponents.h  RenderSystem.h  RenderSystemsGroup.h  RenderUtils.h  RendererModule.h  _api_docs.md
code/modules/renderer/src/: RenderModule.cpp  RenderSystem.cpp  RenderUtils.cpp
code/modules/shooter/: CMakeLists.txt
code/modules/shooter/include/: ShooterModule.h  _docs.md
code/modules/shooter/include/ecs/: CameraControllerSwitch.h  ThirdPersonController.h
code/modules/shooter/src/: ShooterModule.cpp
code/modules/shooter/src/ecs/: CameraControllerSwitch.cpp  ThirdPersonController.cpp
code/prebuilt/: PhysX License.txt
code/prebuilt/Debug/: PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXFoundation_64.lib
code/prebuilt/RelWithDebInfo/: PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.lib  PhysXPvdSDK_static_64.lib  PhysX_64.lib  SampleBase_static_64.lib
code/prebuilt/Release/: PhysXCharacterKinematic_static_64.lib  PhysXFoundation_64.lib  PhysXPvdSDK_static_64.lib  PhysX_64.lib  SampleBase_static_64.lib
(+59 files in other folders)
